# FastAPIwithDocker

./: Dockerfile  README.md  docker-compose.yml  init.sql  pyproject.toml
